Added info for new commands